--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,21 +6,21 @@ environment:
   sdk: ">=2.16.2 <3.0.0"
 
 dependencies:
+  firebase_core_platform_interface: ^4.8.0
   cupertino_icons: ^1.0.2
-  get: 4.6.5
-  google_sign_in: 5.3.3
-  firebase_auth: 3.3.19
-  cloud_firestore: 3.1.17
-  latlong: 0.6.1
-  flutter_map: 1.1.1
-  flutter_map_marker_cluster: 0.5.0
-  geoflutterfire: 3.0.3
-  geolocator: 9.0.0
+  get: ^4.6.5
+  google_sign_in: ^6.1.5
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
+  latlong2: ^0.8.1
+  flutter_map: ^4.0.0
+  flutter_map_marker_cluster: ^1.1.1
+  geolocator: ^10.0.0
   http: ^0.13.5
-  flutter_svg: ^1.1.5
-  getwidget: ^2.0.4
+  flutter_svg: ^2.0.7
+  getwidget: ^4.0.0
   flutter_signin_button: ^2.0.0
-  cached_network_image: ^3.2.2
+  cached_network_image: ^3.2.3
   flutter:
     sdk: flutter
 
